k8s/deployments.yml
# Customer Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
  namespace: garage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: pitstop-customer-service
          image: acrtiukk.azurecr.io/pitstop-customer:latest
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
---
# Vehicle Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-deployment
  namespace: garage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vehicle
  template:
    metadata:
      labels:
        app: vehicle
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: pitstop-vehicle-service
          image: acrtiukk.azurecr.io/pitstop-vehicle:latest
          ports:
            - containerPort: 3002
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
---
# Workshop Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-deployment
  namespace: garage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: workshop
  template:
    metadata:
      labels:
        app: workshop
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: pitstop-workshop-service
          image: acrtiukk.azurecr.io/pitstop-workshop-planning:latest
          ports:
            - containerPort: 3003
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
---
# Gateway Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: garage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: pitstop-express-gateway
          image: acrtiukk.azurecr.io/pitstop-express-gateway:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m"
