k8s/gateway.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: garage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: pitstop-express-gateway
          image: acrtiukk.azurecr.io/pitstop-express-gateway:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m"
