k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
  namespace: garage
  labels:
    app: customer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - name: pitstop-customer-service
        image: ziyadmabrouk/pitstop-customer:for-prom
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: pitstop-customer-service
  namespace: garage
spec:
  selector:
    app: customer
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-deployment
  namespace: garage
  labels:
    app: vehicle-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vehicle
  template:
    metadata:
      labels:
        app: vehicle
    spec:
      containers:
      - name: pitstop-vehicle-service
        image: ziyadmabrouk/pitstop-vehicle:latest
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: pitstop-vehicle-service
  namespace: garage
spec:
  selector:
    app: vehicle
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-deployment
  namespace: garage
  labels:
    app: workshop-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workshop
  template:
    metadata:
      labels:
        app: workshop
    spec:
      containers:
      - name: pitstop-workshop-service
        image: ziyadmabrouk/pitstop-workshop-planning:latest
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: pitstop-workshop-service
  namespace: garage
spec:
  selector:
    app: workshop
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
