k8s/webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: garage
  labels:
    app: webapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: pitstop-webapp
        image: acrtiukk.azurecr.io/pitstop-webapp:latest
        ports:
        - containerPort: 8081
      imagePullSecrets:
      - name: acr-auth

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: garage
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
